# hydrotool

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/ai/: AiAutoPage.tsx
frontend/src/components/dashboard/: Dashboard.tsx
frontend/src/components/flash/: DangerConfirm.tsx  DeviceSelector.tsx  FileSelector.tsx  FlashPage.tsx  ProgressViewer.tsx  SlotManager.tsx
frontend/src/components/hide/: HidePage.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/modules/: ModulePage.tsx
frontend/src/components/root-manager/: RootPage.tsx
frontend/src/components/settings/: SettingsPage.tsx
frontend/src/components/tools/: ToolsPage.tsx
frontend/src/hooks/: useFlashTask.ts  useFlashWebSocket.ts
packaging/: hydrotool-linux.spec  hydrotool-macos.spec  hydrotool-setup.iss  hydrotool-windows.spec  hydrotool.icns
scripts/: setup-dev.sh
src/hydrotool/backend/: app.py  models.py  run.py
src/hydrotool/backend/routers/: ai.py  device.py  flash.py  hide.py  module.py  rom.py  root.py  system.py
src/hydrotool/backend/services/: __init__.py  task_manager.py
src/hydrotool/backend/websocket/: device_stream.py  flash_stream.py
src/hydrotool/cli/: main.py
src/hydrotool/cli/commands/: ai.py  device.py  flash.py  hide.py  module.py  rom.py  root.py
src/hydrotool/core/: __init__.py  device.py
src/hydrotool/core/adb/: client.py
src/hydrotool/core/ai/: executor.py
src/hydrotool/core/fastboot/: client.py
src/hydrotool/core/rom/: __init__.py  boot_image.py  payload_parser.py
src/hydrotool/core/rom/protos/: __init__.py  update_metadata.proto  update_metadata_pb2.py
tests/unit/: test_adb.py  test_device.py
