[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrotool"
version = "0.1.0"
description = "Android刷机调试一体化工具箱 — 跨平台、开源、全流程"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0"}
authors = [
    {name = "HydroTool Contributors"},
]
keywords = ["android", "adb", "fastboot", "root", "magisk", "flashing"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware :: Hardware Drivers",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typing-extensions>=4.0",
    "protobuf>=4.0",
    "construct>=2.10",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0",
]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "sqlmodel>=0.0.22",
    "httpx>=0.27",
    "openai>=1.0",
    "pywebview>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.9",
    "pre-commit>=3.0",
]
all = [
    "hydrotool[web,dev]",
]

[project.urls]
Homepage = "https://github.com/hydrotool/hydrotool"
Repository = "https://github.com/hydrotool/hydrotool"
Documentation = "https://hydrotool.dev"

[project.scripts]
hydrotool = "hydrotool.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hydrotool*"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
